@@ -54,6 +54,7 @@ public class BibDatabase {
     private final ObservableList<BibEntry> entries = FXCollections.synchronizedObservableList(FXCollections.observableArrayList(BibEntry::getObservables));
     private Map<String, BibtexString> bibtexStrings = new ConcurrentHashMap<>();
 
+    // Not included in equals, because it is not relevant for the content of the database
     private final EventBus eventBus = new EventBus();
 
     private String preamble;
@@ -200,7 +201,7 @@ public class BibDatabase {
         if (newEntries.isEmpty()) {
             eventBus.post(new EntriesAddedEvent(newEntries, eventSource));
         } else {
-            eventBus.post(new EntriesAddedEvent(newEntries, newEntries.get(0), eventSource));
+            eventBus.post(new EntriesAddedEvent(newEntries, newEntries.getFirst(), eventSource));
         }
         entries.addAll(newEntries);
     }
@@ -632,5 +633,26 @@ public class BibDatabase {
      */
     public String getNewLineSeparator() {
         return newLineSeparator;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (!(o instanceof BibDatabase that)) {
+            return false;
+        }
+        return Objects.equals(entries, that.entries)
+                && Objects.equals(bibtexStrings, that.bibtexStrings)
+                && Objects.equals(preamble, that.preamble)
+                && Objects.equals(epilog, that.epilog)
+                && Objects.equals(sharedDatabaseID, that.sharedDatabaseID)
+                && Objects.equals(newLineSeparator, that.newLineSeparator);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(entries, bibtexStrings, preamble, epilog, sharedDatabaseID, newLineSeparator);
     }
 }
